Added messages; fixed left-sidebar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,3 +7,13 @@
   color: red;
   padding: 6px;
 }
+
+.fluid-container {
+  margin-top: 70px;
+}
+
+.left-sidebar {
+  position: fixed !important;
+  top: 70px;
+  left: 0;
+}
