--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,9 +1,14 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @chatroom.name %>
 </p>
 
-<%= link_to 'Edit', edit_chatroom_path(@chatroom) %> |
-<%= link_to 'Back', chatrooms_path %>
+<div data-behavior='messages'>
+  <% @messages.each do |message| %>
+    <div><strong><%= message.user.username %>:</strong> <%= message.body %></div>
+  <% end %>
+</div>
+
+<%= form_for [@chatroom, Message.new] do |f| %>
+  <%= f.text_area :body, rows: 1, class: "form-control", autofocus: true %>
+<% end %>
